[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/fonts/pixy.tres" type="DynamicFont" id=1]
[ext_resource path="res://themes/popup_floating.tres" type="StyleBox" id=2]
[ext_resource path="res://themes/popup_bottom.tres" type="StyleBox" id=3]
[ext_resource path="res://sprites/ui/window_border_new.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/grid.png" type="Texture" id=5]
[ext_resource path="res://code/ui/windowMenuBar.gd" type="Script" id=6]
[ext_resource path="res://code/camera_controller.gd" type="Script" id=7]
[ext_resource path="res://code/ui/master_ui_controller.gd" type="Script" id=8]
[ext_resource path="res://code/generate_canvas.gd" type="Script" id=9]
[ext_resource path="res://code/ui/menuButtonPress.gd" type="Script" id=10]
[ext_resource path="res://themes/ui_buttons.tres" type="Theme" id=11]
[ext_resource path="res://sprites/ui/tool_bar.png" type="Texture" id=12]
[ext_resource path="res://sprites/ui/color_bar.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 320, 240 )
margin_left = 161.162
margin_right = 44.8532
margin_top = 24.8763
margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 133, 19 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 114, 12 )

[node name="canvas_editor" type="Node2D"]

[node name="BG" type="Sprite" parent="."]
position = Vector2( 320, 240 )
texture = ExtResource( 5 )
script = ExtResource( 9 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.1, 0.1 )
script = ExtResource( 7 )

[node name="Window Border" type="CanvasLayer" parent="."]

[node name="window_border" type="Panel" parent="Window Border"]
margin_right = 320.0
margin_bottom = 240.0
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 1 )

[node name="tool_bar" type="Panel" parent="Window Border"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -50.0
margin_right = 278.0
margin_bottom = -12.0
custom_styles/panel = SubResource( 2 )

[node name="color_bar" type="Panel" parent="Window Border"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -76.0
margin_right = 240.0
margin_bottom = -52.0
custom_styles/panel = SubResource( 3 )

[node name="WindowMenuBar" type="Control" parent="Window Border"]
margin_right = 1281.0
margin_bottom = 42.0
script = ExtResource( 6 )

[node name="Close" type="Button" parent="Window Border/WindowMenuBar"]
margin_left = 614.0
margin_top = 12.0
margin_right = 632.0
margin_bottom = 32.0
flat = true
script = ExtResource( 10 )

[node name="Maximize" type="Button" parent="Window Border/WindowMenuBar"]
margin_left = 594.0
margin_top = 12.0
margin_right = 612.0
margin_bottom = 32.0
flat = true
script = ExtResource( 10 )

[node name="Minimize" type="Button" parent="Window Border/WindowMenuBar"]
margin_left = 574.0
margin_top = 12.0
margin_right = 592.0
margin_bottom = 32.0
flat = true
script = ExtResource( 10 )

[node name="MinimizeTween" type="Tween" parent="Window Border/WindowMenuBar/Minimize"]

[node name="Help" type="Button" parent="Window Border/WindowMenuBar"]
margin_left = 554.0
margin_top = 12.0
margin_right = 572.0
margin_bottom = 32.0
flat = true
script = ExtResource( 10 )

[node name="File" type="MenuButton" parent="Window Border/WindowMenuBar"]
margin_left = 8.0
margin_top = 12.0
margin_right = 58.0
margin_bottom = 32.0
script = ExtResource( 8 )
options_list = [ "new project", "save", "save as", "preferences", "exit" ]

[node name="Edit" type="MenuButton" parent="Window Border/WindowMenuBar"]
margin_left = 60.0
margin_top = 12.0
margin_right = 110.0
margin_bottom = 32.0
focus_mode = 2
script = ExtResource( 8 )
options_list = [ "select all", "select a color", "cut", "copy", "paste", "duplicate" ]

[node name="View" type="MenuButton" parent="Window Border/WindowMenuBar"]
margin_left = 112.0
margin_top = 12.0
margin_right = 162.0
margin_bottom = 32.0
focus_mode = 2
script = ExtResource( 8 )
options_list = [ "color picker", "pixel brush", "eraser", "layer view", "line tool", "shape tool", "polygon tool", "bucket fill", "gradient tool" ]

[node name="Version Number" type="Label" parent="Window Border/WindowMenuBar"]
margin_left = 451.0
margin_top = 34.0
margin_right = 631.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 62, 19 )
custom_colors/font_color = Color( 1, 1, 1, 0.203922 )
custom_fonts/font = ExtResource( 1 )
text = "v001"
align = 2

[node name="new_project_popup" type="Panel" parent="Window Border"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -79.0
margin_right = 148.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 100, 37.5 )
custom_styles/panel = ExtResource( 2 )

[node name="create" type="Button" parent="Window Border/new_project_popup"]
margin_left = 31.0
margin_top = 6.0
margin_right = 101.0
margin_bottom = 26.0
theme = ExtResource( 11 )

[node name="tx" type="Label" parent="Window Border/new_project_popup/create"]
margin_left = 6.0
margin_top = -8.0
margin_right = 66.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.654902, 0.431373, 0.756863, 1 )
custom_fonts/font = ExtResource( 1 )
text = "create"

[node name="x_pixels" type="TextEdit" parent="Window Border/new_project_popup"]
margin_left = 6.0
margin_top = 28.0
margin_right = 65.0
margin_bottom = 69.0
theme = ExtResource( 11 )

[node name="px" type="Label" parent="Window Border/new_project_popup/x_pixels"]
margin_left = 46.0
margin_top = -6.0
margin_right = 106.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.839216, 1, 0.890196, 1 )
custom_fonts/font = ExtResource( 1 )
text = "X"

[node name="y_pixels" type="TextEdit" parent="Window Border/new_project_popup"]
margin_left = 67.0
margin_top = 28.0
margin_right = 126.0
margin_bottom = 69.0
theme = ExtResource( 11 )
wrap_enabled = true

[node name="px" type="Label" parent="Window Border/new_project_popup/y_pixels"]
margin_left = 47.0
margin_top = -6.0
margin_right = 107.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.839216, 1, 0.890196, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Y"

[node name="credits_popup" type="Panel" parent="Window Border"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 46.0
margin_right = -12.0
margin_bottom = 468.0
rect_pivot_offset = Vector2( 100, 37.5 )
custom_styles/panel = ExtResource( 3 )

[node name="create" type="Button" parent="Window Border/credits_popup"]
margin_left = 56.0
margin_top = 396.0
margin_right = 126.0
margin_bottom = 416.0
theme = ExtResource( 11 )

[node name="tx" type="Label" parent="Window Border/credits_popup/create"]
margin_left = 6.0
margin_top = -8.0
margin_right = 66.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.654902, 0.431373, 0.756863, 1 )
custom_fonts/font = ExtResource( 1 )
text = "github"

[node name="text" type="Label" parent="Window Border/credits_popup"]
margin_left = 6.0
margin_top = 4.0
margin_right = 128.0
margin_bottom = 394.0
custom_colors/font_color = Color( 0.839216, 1, 0.890196, 1 )
custom_colors/font_color_shadow = Color( 0.654902, 0.431373, 0.756863, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = -10
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 1 )
text = "heyo! this program was made by vaight for pixel art!

It is made in godot game engine.

All art, fonts, and code is made by me.

if you have suggestions or something doesn't work, make an issue on github.

enjoy!"
autowrap = true

[node name="github" type="LinkButton" parent="Window Border/credits_popup"]
margin_left = 56.0
margin_top = 380.0
margin_right = 126.0
margin_bottom = 400.0
text = "github"

[connection signal="gui_input" from="Window Border/WindowMenuBar" to="Window Border/WindowMenuBar" method="_on_WindowMenuBar_gui_input"]
[connection signal="pressed" from="Window Border/WindowMenuBar/Close" to="Window Border/WindowMenuBar/Close" method="_on_Close_pressed"]
[connection signal="pressed" from="Window Border/WindowMenuBar/Maximize" to="Window Border/WindowMenuBar/Maximize" method="_on_Maximize_pressed"]
[connection signal="pressed" from="Window Border/WindowMenuBar/Minimize" to="Window Border/WindowMenuBar/Minimize" method="_on_Minimize_pressed"]
[connection signal="tween_completed" from="Window Border/WindowMenuBar/Minimize/MinimizeTween" to="Window Border/WindowMenuBar/Minimize" method="_on_MinimizeTween_tween_completed"]
[connection signal="pressed" from="Window Border/WindowMenuBar/Help" to="Window Border/WindowMenuBar/Help" method="_on_Help_pressed"]
[connection signal="pressed" from="Window Border/new_project_popup/create" to="BG" method="_on_create_pressed"]
